login/out working, base homepage

--- a/grocerycookbook/home/templates/home/index.html
+++ b/grocerycookbook/home/templates/home/index.html
@@ -1,5 +1,7 @@
 {% extends 'home/navigation.html' %}
 
 {% block content %}
-    <h1>home page</h1>
+    <div class="jumbotron">
+        <h1 style="text-align:center;">Welcome to Grocery Cookbook!</h1>    
+    </div>
 {% endblock content %}
