--- a/grocerycookbook/home/templates/home/index.html
+++ b/grocerycookbook/home/templates/home/index.html
@@ -1,4 +1,9 @@
 {% extends 'home/navigation.html' %}
+{% load static %}
+
+{% block head %}
+    <link rel="stylesheet" href="{% static 'home/index.css' %}">
+{% endblock head %}
 
 {% block content %}
     <div class="jumbotron">
