--- a/grocerycookbook/home/templates/home/navigation.html
+++ b/grocerycookbook/home/templates/home/navigation.html
@@ -14,6 +14,7 @@
     {% endblock head %}
 </head>
 <body>
+
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container">
     <a class="navbar-brand" href="{% url 'home:index' %}"><img src="{% static 'images/favicon.png' %}" alt="favicon" height="32" width="32"> Grocery Cookbook</a>
@@ -60,6 +61,18 @@
 
 
     <div class="master-container">
+
+    {% if messages %} <!-- Django messages holder -->
+
+        {% for message in messages %}
+        <div class="alert alert-{% if message.tags == "error" %}danger{% else %}{{message.tags}}{% endif %} django-message" role="alert">
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close" style="margin-top:-2px"><span aria-hidden="true">&nbsp;×</span></button> 
+            <strong>{{message.tags|title}}:</strong> {{ message }}
+        </div>
+        {% endfor %}
+
+    {% endif %}
+
     {% block content %}
 
     {% endblock content %}
