--- a/grocerycookbook/shoppinglist/templates/shoppinglist/index.html
+++ b/grocerycookbook/shoppinglist/templates/shoppinglist/index.html
@@ -12,8 +12,32 @@
     <div class="page-header">
     <h1>Shopping List</h1>
     </div>
-
+    {% csrf_token %}
+    {% crispy create_shopping_list_form %}
+    <br>
     {% csrf_token %}
     {% crispy add_to_shopping_list_form %}
+    <br>
+    <h3>List Contents</h3>
+
+    {{user_list_contents}}
+
+    <div class="table-responsive">
+    <table class="table table-bordered table-striped">
+        <thead>
+            <tr>
+                <th>Item</th>
+                <th>Quantity</th>
+            </tr>
+        </thead>
+        <tbody>
+            {% for list_entry in user_list_contents %}
+            <tr>
+                <td>{{user_list_contents}}</td>
+            </tr>
+            {% endfor %}
+        </tbody>
+    </table>
+    </div>
 </div>
 {% endblock content %}
