add noscript warning

--- a/grocerycookbook/home/static/home/navigation.css
+++ b/grocerycookbook/home/static/home/navigation.css
@@ -6,3 +6,11 @@
     left: 0;
     right: 0;
 }
+
+noscript {
+    position: fixed;
+    margin: auto;
+    width: 100%;
+    text-align: center;
+    font-weight: bold;
+}
