--- a/grocerycookbook/home/templates/home/navigation.html
+++ b/grocerycookbook/home/templates/home/navigation.html
@@ -65,16 +65,16 @@
 
     <div class="master-container">
 
-    {% if messages %} <!-- Django messages holder -->
+    <noscript>This website requires JavaScript. Functionality is limited without it.</noscript>
 
-        {% for message in messages %}
-        <div class="alert alert-{% if message.tags == "error" %}danger{% else %}{{message.tags}}{% endif %} django-message" role="alert">
-            <button type="button" class="close" data-dismiss="alert" aria-label="Close" style="margin-top:-2px"><span aria-hidden="true">&nbsp;×</span></button> 
-            <strong>{{message.tags|title}}:</strong> {{ message }}
-        </div>
-        {% endfor %}
+    <!-- Django messages holder -->
+    {% for message in messages %}
+    <div class="alert alert-{% if message.tags == "error" %}danger{% else %}{{message.tags}}{% endif %} django-message" role="alert">
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close" style="margin-top:-2px"><span aria-hidden="true">&nbsp;×</span></button> 
+        <strong>{{message.tags|title}}:</strong> {{ message }}
+    </div>
+    {% endfor %}
 
-    {% endif %}
 
     {% block content %}
 
